k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bock
  labels:
    environment: local
