k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bockdocs-backend
  namespace: bock
  labels:
    app: bockdocs-backend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5050
    protocol: TCP
  selector:
    app: bockdocs-backend
